# NextLevelApex

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_NOTES.md  codecov.yml  pyproject.toml  pyproject.toml.bak  test-config.json  test_logger.py  trace.txt
.ci/: kick-20250811-221149.txt  kick-20250811-223306.txt  kick-20250811-230041.txt  kick-20250811-233545.txt  kick-20250812-142203.txt
.github/workflows/: ci.yml  codeql.yml  pre-commit.yml  publish.yml
apps/gui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/gui/src/: App.tsx
apps/gui/src/__tests__/: allowlist.test.ts  diagnoseParser.test.ts  nlxBridge.test.ts  redaction.test.ts
apps/gui/src/components/: DashboardScreen.tsx  DetailsScreen.tsx  TasksScreen.tsx
apps/gui/src/engine/: allowlist.ts  demoRunner.ts  diagnoseParser.ts  nlxBridge.ts  redaction.ts  status.ts  taskParser.ts  types.ts
apps/gui/src/styles/: app.css  tokens.css
assets/launch_agents/: com.local.doh.plist.j2
dashboard/: README.md  package-lock.json  package.json  vitest.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/home/: HomePage.tsx  S02_CLOSEOUT.md  S03_CLOSEOUT.md  S04_CLOSEOUT.md  S05_CLOSEOUT.md  S06_CLOSEOUT.md  (+1 more)
dashboard/src/engine/: allowlist.ts  apiContract.ts  bundleDiff.ts  bundleExport.ts  bundleImport.ts  bundleNormalize.ts  caseBundle.ts  caseLibraryStore.ts  caseProvenance.ts  commandContract.ts  config.ts  diagnose.ts  diagnosticsPayload.ts  eventFingerprint.ts  exportReview.ts  guiSettings.ts  historyStore.ts  hostSafety.ts  keyboardShortcuts.ts  nlxErrorSanitizer.ts  nlxService.ts  outputExport.ts  presetsExport.ts  presetsStore.ts  redaction.ts  reducedMotion.ts  releaseCert.ts  runCenterModel.ts  runHistoryCompare.ts  runHistoryStore.ts  runSessions.ts  runShareSafeExport.ts  runner.ts  savedViewsStore.ts  sessionCompare.ts  sessionEventSync.ts  sessionExport.ts  sessionReport.ts  taskDetailsExport.ts  taskResults.ts  (+5 more)
docker/: orchestrate.sh
docker/unbound/: Dockerfile  docker-compose.yml  unbound.minimal.conf
docker/unbound/dockerfiles/: cloudflared-dig.Dockerfile
docker/unbound/state/: root.hints  root.key  unbound.conf
docker/unbound/tests/: run.sh
docs/backlog/: README.md  milestones.md
docs/governance/: agent-protocol.md  pr-gates.md
docs/gui/: ARCHITECTURE.md
docs/sprints/: README.md
docs/sprints/S01/: README.md
docs/sprints/S02/: README.md
docs/sprints/S03/: README.md
docs/sprints/S04/: README.md
docs/sprints/S05/: README.md
docs/sprints/S06/: README.md
docs/sprints/S07/: README.md
docs/sprints/S08/: README.md
docs/sprints/S09/: README.md
docs/sprints/S10/: README.md
docs/sprints/S11/: README.md
docs/sprints/S12/: README.md
docs/sprints/S13/: README.md
docs/sprints/S14/: README.md
docs/sprints/S15/: README.md
docs/sprints/S16/: README.md
docs/sprints/S17/: README.md
docs/sprints/S18/: README.md
docs/sprints/S19/: README.md
docs/sprints/S20/: README.md
docs/sprints/S21/: README.md
docs/sprints/S22/: README.md
docs/sprints/S23/: README.md
docs/sprints/S24/: README.md
etc-pihole/: dnsmasq.conf  gravity.db  pihole-FTL.db  pihole.toml  tls.crt  tls_ca.crt  versions
etc-pihole/config_backups/: pihole.toml.1  pihole.toml.2  pihole.toml.3  pihole.toml.4  pihole.toml.5
etc-pihole/hosts/: custom.list
nextlevelapex/: main.py  main2.py
nextlevelapex/api/: main.py
nextlevelapex/core/: command.py  command.py.bak  config.py  config.py.bak  diagnostics.py  dns_diagnose.py  io.py  logger.py  logger.py.bak  maintenance.py  registry.py  registry.py.bak  report.py  smartconfig.py  state.py  state.py.bak  task.py  task.py.bak  types.py
nextlevelapex/schema/: config.v1.schema.json
nextlevelapex/tasks/: base_task.py  brew.py  cloudflared.py  dev_tools.py  dns_helpers.py  dns_sanity.py  dns_stack.py  dns_stack_runtime.py  dummy_healing_task.py  launch_agents.py  mise.py  network.py  ollama.py  optional.py  pihole.py  security.py  system.py
nextlevelapex/tasks/shared/: dns_helpers.py
nextlevelapex/templates/: default_config.json.template
nextlevelapex/utils/: sanitizer.py
reports/: nextlevelapex-2026-02-20T01-24-46.html  nextlevelapex-2026-02-20T01-24-46.md  nextlevelapex-2026-02-20T02-02-09.html  nextlevelapex-2026-02-20T02-02-09.md  nextlevelapex-2026-02-20T02-02-27.html  nextlevelapex-2026-02-20T02-02-27.md  nextlevelapex-2026-02-20T23-46-56.html  nextlevelapex-2026-02-20T23-46-56.md  nextlevelapex-2026-02-20T23-47-32.html  nextlevelapex-2026-02-20T23-47-32.md  nextlevelapex-2026-02-20T23-48-11.html  nextlevelapex-2026-02-20T23-48-11.md  nextlevelapex-latest.html  nextlevelapex-latest.md
schema/: config.v1.schema.json
scripts/: dev-setup.sh  env-integrity.sh  fix-core-mypy-pass2.sh  fix-core-mypy-pass3.sh  fix-core-mypy-pass4.sh  fix-core-mypy.sh  fix-coverage-threshold.sh  fix-mypy-final.sh  fix-mypy-final2.sh  fix-mypy-logger-final.sh  fix-mypy-logger.sh  fix-mypy-logger2.sh  fix-pass4-regression.sh  fix-pyproject-pytest-block.sh  fix-tests-and-coverage.sh  fix-tests-and-coverage2.sh  fix-tests-and-coverage3.sh  pr_doctor.sh  quick-fix-mypy.sh  scope-coverage-to-tested.sh  scope-coverage-to-tested2.sh
tests/: conftest.py  stack-sanity.sh  test_cli_help.py  test_config_load.py  test_diagnose_command.py  test_launch_agents_tasks.py  test_main_cli.py  test_main_entrypoint_shim.py  test_mise_tasks.py  test_optional_tasks.py  test_registry_redteam.py  test_report_redteam.py  test_tasks.py  test_tasks_edge_cases.py
tests/core/: test_atomic_io.py  test_dependency_governance.py  test_dns_diagnose.py  test_drift_accuracy.py  test_drift_atomic.py  test_install_sudoers.py  test_registry_security.py  test_report_markdown_redteam.py  test_report_xss.py  test_state_ingestion_caps.py
tests/core/diagnostics/: test_trim.py  test_trim_stats.py
tests/tasks/: test_dev_tools.py  test_dns_helpers.py  test_dns_sanity.py  test_dns_stack_runtime.py  test_security.py
(+81 files in other folders)
