[build-system]
requires       = ["poetry-core>=1.0.0"]
build-backend  = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F401", "E501"]

[tool.poetry]
name           = "nextlevelapex"
version        = "0.1.1"
description    = "Apex-level macOS setup orchestrator"
readme         = "README.md"
authors        = ["Marcus Smith <doogie201@gmail.com>"]
license        = "MIT"
homepage       = "https://github.com/Doogie201/NextLevelApex"
repository     = "https://github.com/Doogie201/NextLevelApex.git"
documentation  = "https://github.com/Doogie201/NextLevelApex#readme"
keywords       = ["macos", "automation", "setup", "cli", "orchestration"]
classifiers    = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS :: MacOS X",
  "License :: OSI Approved :: MIT License"
]

# ensure Poetry picks up your Python package & the JSON schema files
packages = [
  { include = "nextlevelapex" }
]
include = [
  "nextlevelapex/schema/*.json"
]

[tool.poetry.dependencies]
python      = ">=3.10,<4.0"
typer       = { version = "^0.15.4", extras = ["all"] }
jsonschema  = "^4.23.0"
colorlog = "^6.8.0"
jinja2 = ">=3.1,<4"

[tool.poetry.extras]
# if you ever want to install just the CLI bits
cli = ["typer"]

[tool.poetry.scripts]
nlx = "nextlevelapex.main:app"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
ruff            = "^0.11.8"
mypy            = "^1.15.0"
types-requests  = "^2.32.0"
pytest          = "^8.3.5"
black           = "^23.12.1"
isort           = "^5.13.2"
pre-commit      = "^2.21.0"
yamllint        = "^1.37.1"
coverage        = "^7.8.0"
pytest-cov      = "^6.1.1"

[tool.pytest.ini_options]
pythonpath = ["."]
